
	* lib/python.cygclass (pythoninto, dopython): New convenience functions.
	(python_compile): Created alias to python_optimize.
	(python_optimize):
	Defaults to compiling in PYTHON_SITELIB if no arguments passed.

	* bin/cygport.in (pkg_diff): Restructure to be more precise.

	* lib/distutils.cygclass (distutils_install):
	Only python_optimize PYTHON_SITELIB if existant. 

	* lib/gst-plugins0.10.cygclass: Added new plugins in bad-10.4.
	Force xshm support for ximage.
	Enable cdparanoia support (requires patch to use libcdio_paranoia).

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump for post-0.2 HEAD.

*** 0.2.11 ***

	* Branch STABLE_0_2.

	* bin/cygport.in (apply_patch): Pass --binary to patch for d2u issues.

	* lib/perl.cygclass (check_perl_module): Cleaner syntax.

	* lib/kde3.cygclass: Don't run kde3_autoreconf for i18n/l10n packages.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.2.10 ***

	* README: Update location of sample.cygport.

	* lib/ruby.cygclass (ruby_install): Fix last setup.rb install patch.

	* lib/gst-plugins0.8.cygclass: Restore opengl plugin.

	* bin/cygport.in: Allow user-specific cygport.conf files in $HOME.

	* data/mirrors (mirror_apache): Added.

	* lib/pygtk.cygclass: Add pytotem from gnome-python-desktop.

	* data/mirrors (mirror_xfce): Added.

	* lib/kde3.cygclass: Define SRC_URI for kdevelop-3.4 and amarok.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.9 ***

	* bin/cygport.in (unpack): Handle .shar files with unshar.

	* lib/ruby.cygclass (ruby_install): Pass --prefix to setup.rb install.

	* bin/cygport.in (__prepdoc): Add HISTORY to default_docs.

	* bin/cygport.in (src_prep): 
	Sanity check for origsrc/SRC_DIR before applying PATCH_URIs.

	* data/mirrors (mirror_gentoo): Added.

	* data/mirrors (mirror_rubyforge): Added.

	* data/Makefile.am
	* data/cygport.nanorc:
	nano(1) syntax highlighting rcfile for cygports and cygclasses.
