@@ -6,7 +6,7 @@
 # Provided by the Cygwin Ports project <http://cygwinports.dotsrc.org/>
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: cygport.in,v 1.56 2007-03-12 06:49:12 yselkowitz Exp $
+# $Id: cygport.in,v 1.57 2007-03-13 14:33:43 yselkowitz Exp $
 #
 ################################################################################
 
@@ -846,18 +846,21 @@ readonly -f lndirs cygautoreconf cygconf cygmake
 #
 ################################################################################
 
-# runs 'make check' for automake-based packages, otherwise 'make test'
+# runs 'make check' or 'make test'
 cygtest() {
 	if [ -e Makefile -o -e GNUmakefile -o -e makefile ]
 	then
-		if [ -f ${S}/Makefile.am -o -f ${S}/GNUmakefile.am -o -f ${S}/makefile.am ]
+		if make -n check &> /dev/null
 		then
 			make check;
-		else
+		elif make -n test &> /dev/null
+		then
 			make test;
+		else
+			error "Neither make check nor make test work.  You must define your own src_test().";
 		fi
 	else
-		error "no Makefile found.  You must make your own src_test().";
+		error "no Makefile found.  You must define your own src_test().";
 	fi
 }
 
