@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (cygtest): Smarter detection of make check and make test.
+
 	* lib/python.cygclass (pythoninto, dopython): New convenience functions.
 	(python_compile): Created alias to python_optimize.
 	(python_optimize):
